--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -4,7 +4,8 @@ project(':cloud-ops-rest-api') {
     apply plugin: 'idea'
 
     dependencies {
-//        compile project(':iop-ops-ui')
+//        compile project(':cloud-ops-ui')
+        compile project(':cloud-ops-tosca')
         compile 'org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE'
         compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
         compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.2.RELEASE'
