--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -15,11 +15,13 @@ project(':cloud-ops-rest-api') {
             exclude group: 'javax.servlet', module: 'servlet-api'
         }*/
         compile("net.lingala.zip4j:zip4j:1.3.1")
+        compile("io.springfox:springfox-swagger2:2.2.2")
+        compile("io.springfox:springfox-swagger-ui:2.2.2")
         compile("commons-io:commons-io:2.5")
         compile("org.projectlombok:lombok")
         compile("commons-lang:commons-lang:2.5")
         compile("commons-beanutils:commons-beanutils:1.8.3")
-        compile("com.google.guava:guava:13.0.1")
+        compile("com.google.guava:guava:18.0")
         compile("org.eclipse.jgit:org.eclipse.jgit:4.4.1.201607150455-r")
         compile("ch.ethz.ganymed:ganymed-ssh2:build210")
         compile("com.h2database:h2")
