--- a/cloud-ops-tosca/src/main/resources/com/cloud/ops/toscamodel/impl/normative_types.yaml
+++ b/cloud-ops-tosca/src/main/resources/com/cloud/ops/toscamodel/impl/normative_types.yaml
@@ -180,6 +180,8 @@ node_types:
         properties:
             tomcat_home:
                 type: string
+            app_context:
+                type: string
             user:
                 type: string
             password:
