--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -18,6 +18,7 @@ project(':cloud-ops-rest-api') {
         compile("io.springfox:springfox-swagger2:2.2.2")
         compile("io.springfox:springfox-swagger-ui:2.2.2")
         compile("commons-io:commons-io:2.5")
+        compile("commons-fileupload:commons-fileupload:1.2.2")
         compile("org.projectlombok:lombok")
         compile("commons-lang:commons-lang:2.5")
         compile("commons-beanutils:commons-beanutils:1.8.3")
