--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -2,10 +2,14 @@ project(':cloud-ops-rest-api') {
 
     apply plugin: 'org.springframework.boot'
     apply plugin: 'idea'
+    apply plugin: 'war'
+
 
     dependencies {
-//        compile project(':cloud-ops-ui')
+        compile project(':cloud-ops-ui')
         compile project(':cloud-ops-tosca')
+        compile("org.springframework.boot:spring-boot-devtools")
+        providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
         compile 'org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE'
         compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
         compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.2.RELEASE'
@@ -38,7 +42,11 @@ project(':cloud-ops-rest-api') {
     }
 
     bootRun {
+        addResources = true
         jvmArgs "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"
     }
 
+    war {
+        baseName = 'cloud-ops'
+    }
 }
