--- a/cloud-ops-dao/build.gradle
+++ b/cloud-ops-dao/build.gradle
@@ -1,12 +1,13 @@
-project(':cloud-ops-security') {
+project(':cloud-ops-dao') {
 
     apply plugin: 'idea'
     apply plugin: 'java'
 
     dependencies {
-        compile project(':cloud-ops-dao')
-        compile ('org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE')
-        compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
+        compile project(':cloud-ops-common')
+        compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.2.RELEASE'
+        compile "mysql:mysql-connector-java:5.1.21"
+        testCompile("com.h2database:h2:1.4.192")
         testCompile("org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE")
     }
 
