--- a/cloud-ops-dao/src/main/resources/application.yml
+++ b/cloud-ops-dao/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-local:
-    management:
-        port: 8090
 spring:
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
@@ -11,3 +8,4 @@ spring:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
