--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -7,6 +7,7 @@ project(':cloud-ops-rest-api') {
 
     dependencies {
 //        compile project(':cloud-ops-ui')
+        compile project(':cloud-ops-dao')
         compile project(':cloud-ops-tosca')
         compile project(':cloud-ops-security')
         compile("org.springframework.boot:spring-boot-devtools")
@@ -15,25 +16,15 @@ project(':cloud-ops-rest-api') {
             exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
         }
 //        compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
-        compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.2.RELEASE'
         compile 'org.springframework.boot:spring-boot-starter-websocket:1.5.2.RELEASE'
 //        compile 'org.springframework:springloaded:1.2.6.RELEASE'
         /*compile("com.inspur.cloudframework:spring-side:4.1.0-SNAPSHOT"){
             exclude group: 'javax.servlet', module: 'servlet-api'
         }*/
-        compile("net.lingala.zip4j:zip4j:1.3.1")
+//        compile "mysql:mysql-connector-java:5.1.21"
         compile("io.springfox:springfox-swagger2:2.2.2")
         compile("io.springfox:springfox-swagger-ui:2.2.2")
-        compile("commons-io:commons-io:2.5")
-        compile("commons-fileupload:commons-fileupload:1.2.2")
-        compile("org.projectlombok:lombok")
-        compile("commons-lang:commons-lang:2.5")
-        compile("commons-beanutils:commons-beanutils:1.8.3")
-        compile("com.google.guava:guava:18.0")
-        compile("org.eclipse.jgit:org.eclipse.jgit:4.4.1.201607150455-r")
-        compile("ch.ethz.ganymed:ganymed-ssh2:build210")
-        compile("com.h2database:h2")
-        compile "mysql:mysql-connector-java:5.1.21"
+
         testCompile("org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE")
     }
 
