--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'cloud-ops-tosca'
 include 'cloud-ops-security'
 include 'cloud-ops-dao'
 include 'cloud-ops-common'
+include 'cloud-ops-esc'
 
