--- a/cloud-ops-rest-api/src/main/resources/application.yml
+++ b/cloud-ops-rest-api/src/main/resources/application.yml
@@ -11,3 +11,8 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+logging:
+    path: /var/log
+    file: cloud-ops.log
+    level:
+        com.cloud.ops.service: DEBUG
