--- a/cloud-ops-security/build.gradle
+++ b/cloud-ops-security/build.gradle
@@ -7,6 +7,7 @@ project(':cloud-ops-security') {
         compile project(':cloud-ops-dao')
         compile ('org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE')
         compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
+        compile 'org.springframework.boot:spring-boot-starter-actuator:1.5.2.RELEASE'
         testCompile("org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE")
     }
 
