--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -1,6 +1,7 @@
 project(':cloud-ops-rest-api') {
 
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'war'
 
@@ -10,7 +11,7 @@ project(':cloud-ops-rest-api') {
         compile project(':cloud-ops-dao')
         compile project(':cloud-ops-tosca')
         compile project(':cloud-ops-security')
-        compile("org.springframework.boot:spring-boot-devtools")
+//        compile("org.springframework.boot:spring-boot-devtools")
 //        providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
         compile("org.springframework.boot:spring-boot-starter-tomcat")
         compile ('org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE'){
@@ -18,7 +19,7 @@ project(':cloud-ops-rest-api') {
         }
 //        compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
         compile 'org.springframework.boot:spring-boot-starter-websocket:1.5.2.RELEASE'
-//        compile 'org.springframework:springloaded:1.2.6.RELEASE'
+        compile 'org.springframework:springloaded:1.2.6.RELEASE'
         /*compile("com.inspur.cloudframework:spring-side:4.1.0-SNAPSHOT"){
             exclude group: 'javax.servlet', module: 'servlet-api'
         }*/
@@ -40,6 +41,10 @@ project(':cloud-ops-rest-api') {
         addResources = true
 //        jvmArgs "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"
     }
+
+    /*springBoot {
+        executable = true
+    }*/
 
     war {
         baseName = 'cloud-ops'
