multipart file has moved

--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -47,6 +47,7 @@ project(':cloud-ops-rest-api') {
     }*/
 
     war {
-        baseName = 'cloud-ops'
+        archiveName = 'cloud-ops.war'
+        destinationDir = file "docker-dir"
     }
 }
