--- a/cloud-ops-rest-api/src/main/resources/application.yml
+++ b/cloud-ops-rest-api/src/main/resources/application.yml
@@ -14,5 +14,5 @@ spring:
 logging:
     path: /var/log
     file: cloud-ops.log
-    level:
-        com.cloud.ops.service: DEBUG
+    level: DEBUG
+#        com.cloud.ops.service: DEBUG
