--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -9,8 +9,8 @@ project(':cloud-ops-rest-api') {
     dependencies {
         compile project(':cloud-ops-ui')
         compile project(':cloud-ops-dao')
-        compile project(':cloud-ops-tosca')
         compile project(':cloud-ops-security')
+        compile project(':cloud-ops-esc')
 //        compile("org.springframework.boot:spring-boot-devtools")
 //        providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
         compile("org.springframework.boot:spring-boot-starter-tomcat")
