--- a/cloud-ops-common/build.gradle
+++ b/cloud-ops-common/build.gradle
@@ -14,6 +14,7 @@ project(':cloud-ops-common') {
         compile("org.projectlombok:lombok:1.14.4")
         compile("org.eclipse.jgit:org.eclipse.jgit:4.4.1.201607150455-r")
         compile("ch.ethz.ganymed:ganymed-ssh2:build210")
+        compile("org.springframework:spring-context:4.3.7.RELEASE")
         testCompile("org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE")
     }
 
