--- a/cloud-ops-tosca/build.gradle
+++ b/cloud-ops-tosca/build.gradle
@@ -4,6 +4,7 @@ project(':cloud-ops-tosca') {
     apply plugin: 'java'
 
     dependencies {
+        compile project(':cloud-ops-dao')
         compile("org.yaml:snakeyaml:1.17")
         compile("com.google.guava:guava:18.0")
         compile("org.projectlombok:lombok:1.16.14")
