--- a/cloud-ops-rest-api/build.gradle
+++ b/cloud-ops-rest-api/build.gradle
@@ -8,8 +8,8 @@ project(':cloud-ops-rest-api') {
 
     dependencies {
         compile project(':cloud-ops-ui')
-        compile project(':cloud-ops-security')
-        compile project(':cloud-ops-esc')
+        compile project(':cloud-ops-websocket')
+        compile project(':cloud-ops-core')
 //        compile("org.springframework.boot:spring-boot-devtools")
 //        providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
         compile("org.springframework.boot:spring-boot-starter-tomcat")
