--- a/cloud-ops-rest-api/src/main/resources/application.yml
+++ b/cloud-ops-rest-api/src/main/resources/application.yml
@@ -1,18 +1,5 @@
 server:
     contextPath: /cloud-ops
 spring:
-    datasource:
-        driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://10.110.20.20:3306/cloud-ops
-        username: root
-        password: 123456a?
-    jpa:
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
-logging:
-    path: /var/log
-    file: cloud-ops.log
-    level: DEBUG
-#        com.cloud.ops.service: DEBUG
+    profiles:
+        active: dev
