--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,7 @@ allprojects {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         jcenter()
     }
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
 }
