--- a/cloud-ops-rest-api/src/main/resources/application-test.yml
+++ b/cloud-ops-rest-api/src/main/resources/application-test.yml
@@ -1,9 +1,7 @@
 spring:
-    profiles:
-        active: dev
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://10.110.20.20:3306/cloud_ops
+        url: jdbc:mysql://10.110.20.20:3306/cloud_ops_init
         username: root
         password: 123456a?
     jpa:
