--- a/cloud-ops-common/build.gradle
+++ b/cloud-ops-common/build.gradle
@@ -15,6 +15,7 @@ project(':cloud-ops-common') {
         compile("org.eclipse.jgit:org.eclipse.jgit:4.4.1.201607150455-r")
         compile("ch.ethz.ganymed:ganymed-ssh2:build210")
         compile("org.springframework:spring-context:4.3.7.RELEASE")
+        compile 'org.springframework.boot:spring-boot-starter-websocket:1.5.2.RELEASE'
         testCompile("org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE")
     }
 
@@ -24,4 +25,6 @@ project(':cloud-ops-common') {
             outputDir = file("$buildDir/classes/main/")
         }
     }
+
+
 }
