--- a/cloud-ops-esc/build.gradle
+++ b/cloud-ops-esc/build.gradle
@@ -6,8 +6,8 @@ project(':cloud-ops-esc') {
     dependencies {
         compile project(':cloud-ops-common')
         compile project(':cloud-ops-tosca')
-        compile("org.apache.jclouds.labs:docker:1.9.2")
-        compile("org.apache.jclouds.driver:jclouds-log4j:1.9.2")
+        compile("org.apache.jclouds:jclouds-all:2.0.1")
+        compile("org.apache.jclouds.driver:jclouds-log4j:2.0.1")
     }
 
     idea {
